Hosts evaluation, manual update, etc
Several new features and fixes:
- Host states are also evaluated (see also issue #11)
- New settings for evaluating hosts and/or services
- Manual update implemented (see also issue #3)
- Settings dialog now stores changed Icinga2 settings (d'oh!)
- Icinga2Client functions now throw exceptions in case of errors
- New Icinga2Client functions updateHosts() and checkServices()
- TrayIcon displays a short tool-tip once data thread has been started

--- a/App.config
+++ b/App.config
@@ -41,7 +41,13 @@
                 <value>False</value>
             </setting>
             <setting name="icinga_update_interval" serializeAs="String">
-                <value>60</value>
+                <value>1</value>
+            </setting>
+            <setting name="icinga_check_hosts" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="icinga_check_services" serializeAs="String">
+                <value>True</value>
             </setting>
         </IcingaBusylightAgent.Properties.Settings>
     </userSettings>
