--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -33,7 +33,13 @@
       <Value Profile="(Default)">False</Value>
     </Setting>
     <Setting Name="icinga_update_interval" Type="System.Int32" Scope="User">
-      <Value Profile="(Default)">60</Value>
+      <Value Profile="(Default)">1</Value>
+    </Setting>
+    <Setting Name="icinga_check_hosts" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="icinga_check_services" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
     </Setting>
   </Settings>
 </SettingsFile>
