--- a/IcingaBusylightAgent/App.config
+++ b/IcingaBusylightAgent/App.config
@@ -49,6 +49,15 @@
             <setting name="icinga_check_services" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="sound_file" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="icinga_hostgroups" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="icinga_hosts" serializeAs="String">
+                <value />
+            </setting>
         </IcingaBusylightAgent.Properties.Settings>
     </userSettings>
 </configuration>
