--- a/IcingaBusylightAgent/Properties/Settings.settings
+++ b/IcingaBusylightAgent/Properties/Settings.settings
@@ -41,5 +41,14 @@
     <Setting Name="icinga_check_services" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="sound_file" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="icinga_hostgroups" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="icinga_hosts" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
