--- a/IcingaBusylightAgent/App.config
+++ b/IcingaBusylightAgent/App.config
@@ -58,6 +58,12 @@
             <setting name="icinga_hosts" serializeAs="String">
                 <value />
             </setting>
+            <setting name="log_mode" serializeAs="String">
+                <value>console</value>
+            </setting>
+            <setting name="log_level" serializeAs="String">
+                <value>2</value>
+            </setting>
         </IcingaBusylightAgent.Properties.Settings>
     </userSettings>
 </configuration>
