--- a/IcingaBusylightAgent/IcingaBusylightAgent.csproj
+++ b/IcingaBusylightAgent/IcingaBusylightAgent.csproj
@@ -100,6 +100,7 @@
     <Compile Include="Icinga2Client.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SimpleLogger.cs" />
     <Compile Include="Strings.de-DE.Designer.cs">
       <DependentUpon>Strings.de-DE.resx</DependentUpon>
       <AutoGen>True</AutoGen>
