--- a/IcingaBusylightAgent/App.config
+++ b/IcingaBusylightAgent/App.config
@@ -23,7 +23,7 @@
                 <value>IM2</value>
             </setting>
             <setting name="sound_volume" serializeAs="String">
-                <value>Max</value>
+                <value>Middle</value>
             </setting>
             <setting name="color_up_ok" serializeAs="String">
                 <value>Lime</value>
@@ -37,11 +37,8 @@
             <setting name="color_unknown" serializeAs="String">
                 <value>Fuchsia</value>
             </setting>
-            <setting name="debug" serializeAs="String">
-                <value>False</value>
-            </setting>
             <setting name="icinga_update_interval" serializeAs="String">
-                <value>1</value>
+                <value>5</value>
             </setting>
             <setting name="icinga_check_hosts" serializeAs="String">
                 <value>True</value>
@@ -63,6 +60,18 @@
             </setting>
             <setting name="log_level" serializeAs="String">
                 <value>2</value>
+            </setting>
+            <setting name="spam_thres" serializeAs="String">
+                <value>8</value>
+            </setting>
+            <setting name="balloon_enable" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="lync_enable" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="balloon_enable_start" serializeAs="String">
+                <value>True</value>
             </setting>
         </IcingaBusylightAgent.Properties.Settings>
     </userSettings>
