Implemented Lync/SfB workaround
After alarms were displayed, the Lync/SfB state is read - color is reset
appropriately

--- a/IcingaBusylightAgent/App.config
+++ b/IcingaBusylightAgent/App.config
@@ -73,6 +73,21 @@
             <setting name="balloon_enable_start" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="skype_online" serializeAs="String">
+                <value>Lime</value>
+            </setting>
+            <setting name="skype_busy" serializeAs="String">
+                <value>Red</value>
+            </setting>
+            <setting name="skype_dnd" serializeAs="String">
+                <value>Fuchsia</value>
+            </setting>
+            <setting name="skype_away" serializeAs="String">
+                <value>Yellow</value>
+            </setting>
+            <setting name="skype_other" serializeAs="String">
+                <value>Black</value>
+            </setting>
         </IcingaBusylightAgent.Properties.Settings>
     </userSettings>
 </configuration>
