--- a/IcingaBusylightAgent/IcingaBusylightAgent.csproj
+++ b/IcingaBusylightAgent/IcingaBusylightAgent.csproj
@@ -70,6 +70,10 @@
     <Reference Include="BusylightSDK">
       <HintPath>D:\Busylight_SDK\DOTNET4\BusylightSDK.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.Lync.Model, Version=15.0.0.0, Culture=neutral, PublicKeyToken=71e9bce111e9429c, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>C:\Program Files (x86)\Microsoft Office 2013\LyncSDK\Assemblies\Desktop\Microsoft.Lync.Model.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
